test/functionBodyParseError.slq

def id(x:ğ”¹)qfreeâ†’x; // error
def main(){
	x:=array(3,0:ğ”¹);
	for i in [0..3){
		x[i]:=id(x[i]);
	}
	return x;
} // error
